<resources>
    <string name="app_name">ZOLClientAndroid</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="news">资讯</string>
    <string name="price">查报价</string>
    <string name="bbs">论坛</string>
    <string name="electricity">放心购</string>
    <string name="i">我</string>
    <string name="user_login">用户登录</string>
    <string name="register">注册</string>
    <string name="product_category">产品类别</string>
    <string name="product_bands">品牌</string>
    <string name="user_phone_register">手机号注册</string>
    <string name="register_phone_nember">请输入手机号</string>
    <string name="register_password">请输入密码</string>
    <string name="register_agreement">我同意“中关村在线用户注册协议”和“隐私权声明”</string>
    <string name="next">下一步</string>
    <string name="comment">%1$s评论</string>
    <string name="robsofa">抢沙发</string>
    <string name="shopping_at_once">立即抢购</string>
    <string name="price_place_holder">￥%1$s</string>
    <string name="price_place_holder">￥%1$s</string>
    <string name="remain_days">%1$s</string>
    <string name="rob_shop_price">抢购价:</string>
    <string name="care_count">%1$s人关注</string>
    <string name="frag_news_xw_item_title">支付大战来袭 关于三星Pay你应该了解的</string>
    <string name="frag_news_xw_item_comment_down">%1$s评论</string>
    <string name="Admin">账号管理</string>
</resources>
