<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/prodinfo_top"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <!--用户登录界面的返回按钮-->
            <!--drawablePadding属性设定图片与文字的距离,可为负数-->
            <TextView
                android:id="@+id/back_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/selector_public_toolbar_back_button"
                android:drawableLeft="@drawable/icon_back"
                android:drawablePadding="-20dp"
                android:drawableStart="@drawable/icon_back"
                android:gravity="center"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:text="@string/user_phone_register"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RelativeLayout>


    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/register_phone_nember"/>

    <EditText
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/register_password"/>

    <CheckBox
        android:layout_margin="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/register_agreement"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/selector_activity_login_login_button"
        android:text="@string/next"
        android:textColor="@color/white"/>

</LinearLayout>
