<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:orientation="vertical"
              android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--1.精选-->
        <LinearLayout
            android:id="@+id/frag_shop_lv_item_choiceness_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="gone">

            <!--1.1.精选特惠-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ele_choice"
                android:drawableStart="@drawable/ele_choice"
                android:text="精选特惠"/>

            <!--1.2.正品保证-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="正品保证,包退包换"
                android:textColor="#c9c9c9"/>
        </LinearLayout>

        <!--2.图片-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0f0">

            <!--2.1.商品图片-->
            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/goods_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--2.2.剩几天-->
            <TextView
                android:id="@+id/frag_shop_lv_item_remains_day_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/choice_time_bg"
                android:drawableLeft="@drawable/choice_time"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/choice_time"
                android:padding="5dp"
                android:text="剩8天"
                android:textColor="@color/white"/>

            <!--2.3.今日爆款-->
            <LinearLayout
                android:id="@+id/frag_shop_lv_care_count_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/goods_pic"
                android:orientation="horizontal"
                android:visibility="gone">
                <!--2.3.1.今日爆款-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/electricity_red_bg"
                    android:gravity="center"
                    android:paddingEnd="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="20dp"
                    android:paddingStart="10dp"
                    android:text="今日爆款"
                    android:textColor="@color/white"/>
                <!--2.3.2.关注量-->
                <TextView
                    android:id="@+id/frag_shop_lv_item_care_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/electricity_care"
                    android:gravity="center"
                    android:paddingEnd="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="20dp"
                    android:paddingStart="10dp"
                    android:text="@string/care_count"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </RelativeLayout>

        <!--3.商城-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frag_shop_lv_item_text_frame"
            android:orientation="vertical"
            android:padding="10dp">

            <!--3.1商城-->
            <LinearLayout
                android:id="@+id/frag_shop_lv_item_goods_name_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--3.1.1.商城-->
                <TextView
                    android:id="@+id/frag_shop_lv_item_goods_name_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/electricity_red_bg"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="商城"
                    android:textColor="@color/white"/>

                <!--3.1.2.人体工学-->
                <TextView
                    android:id="@+id/goods_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="人体工学舒适握持感 定位准 3档DPI调节 轻松适应各种鼠标表面"/>
            </LinearLayout>

            <!--3.2.抢购价-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--3.2.1.抢购价-->
                <LinearLayout
                    android:id="@+id/frag_shop_lv_item_sale_price_ll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <!--3.2.1.1.抢购价-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--抢购价,文字-->
                        <TextView
                            android:id="@+id/frag_shop_lv_item_unused1_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rob_shop_price"
                            android:textColor="#999999"/>
                        <!--抢购价,价格-->
                        <TextView
                            android:id="@+id/frag_shop_lv_item_sale_price_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_place_holder"
                            android:textColor="#cc0000"
                            android:textSize="25sp"/>

                    </LinearLayout>
                    <!--3.2.1.2市场价-->
                    <TextView
                        android:id="@+id/frag_shop_lv_item_market_price_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_place_holder"
                        android:textColor="#c1bfbf"/>
                </LinearLayout>

                <!--3.2.2.抢购-->
                <Button
                    android:id="@+id/frag_shop_lv_item_buy_now_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/electricity_buying"
                    android:text="@string/shopping_at_once"
                    android:textColor="@color/red"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>